// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleIntro default renders correctly 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 3rem;
  color: #1c2070;
}

.c2 {
  font-size: 1.25rem;
  font-weight: 300;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  text-align: center;
}

@media screen and (min-width:46em) {
  .c0 {
    width: 83.33333333333334%;
  }
}

<div
    class="c0"
    width="[object Object]"
  >
    <h1
      class="c1"
      color="purples.3"
    >
      hello
    </h1>
    <p
      class="c2"
    >
      world
    </p>
  </div>
</DocumentFragment>
`;

exports[`TitleIntro default renders with an icon 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 3rem;
  color: #1c2070;
}

.c3 {
  font-size: 1.25rem;
  font-weight: 300;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  text-align: center;
}

.c2 {
  margin-right: 0.5em;
  position: relative;
  top: 2px;
}

@media screen and (min-width:46em) {
  .c0 {
    width: 83.33333333333334%;
  }
}

<div
    class="c0"
    width="[object Object]"
  >
    <h1
      class="c1"
      color="purples.3"
    >
      <span
        class="c2"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 128h-80V80c0-26.5-21.5-48-48-48H176c-26.5 0-48 21.5-48 48v48H48c-26.5 0-48 21.5-48 48v288c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V176c0-26.5-21.5-48-48-48zM192 96h128v32H192V96zm160 248c0 4.4-3.6 8-8 8h-56v56c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-56h-56c-4.4 0-8-3.6-8-8v-48c0-4.4 3.6-8 8-8h56v-56c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v56h56c4.4 0 8 3.6 8 8v48z"
          />
        </svg>
      </span>
      hello
    </h1>
    <p
      class="c3"
    >
      world
    </p>
  </div>
</DocumentFragment>
`;

exports[`TitleIntro default renders with different cols 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 3rem;
  color: #1c2070;
}

.c2 {
  font-size: 1.25rem;
  font-weight: 300;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  text-align: center;
}

@media screen and (min-width:46em) {
  .c0 {
    width: 41.66666666666667%;
  }
}

<div
    class="c0"
    width="[object Object]"
  >
    <h1
      class="c1"
      color="purples.3"
    >
      hello
    </h1>
    <p
      class="c2"
    >
      world
    </p>
  </div>
</DocumentFragment>
`;

exports[`TitleIntro default renders with different titleColor 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 3rem;
  color: black;
}

.c2 {
  font-size: 1.25rem;
  font-weight: 300;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  text-align: center;
}

@media screen and (min-width:46em) {
  .c0 {
    width: 83.33333333333334%;
  }
}

<div
    class="c0"
    width="[object Object]"
  >
    <h1
      class="c1"
      color="black"
    >
      hello
    </h1>
    <p
      class="c2"
    >
      world
    </p>
  </div>
</DocumentFragment>
`;
